objects/Campaign_Jobs__c/fields/Creative_Brief_Template__c.field-meta.xml
<CustomField>
    <fullName>Creative_Brief_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creative Brief Template</label>
    <referenceTo>Specification_Template__c</referenceTo>
    <relationshipLabel>Campaign Jobs</relationshipLabel>
    <relationshipName>Campaign_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>