objects/Campaign_Jobs__c/fields/Media_Type__c.field-meta.xml
<CustomField>
    <fullName>Media_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Media Type</label>
    <referenceTo>Media_Type__c</referenceTo>
    <relationshipLabel>Campaign Jobs</relationshipLabel>
    <relationshipName>Campaign_Jobs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>