objects/Campaign_Jobs__c/fields/Schedule_Template__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Schedule Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Schedule_Template__c.Media_Types__c</field>
            <operation>equals</operation>
            <valueField>$Source.Media_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Schedule_Template__c</referenceTo>
    <relationshipLabel>Campaign Jobs</relationshipLabel>
    <relationshipName>Campaign_Jobs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>